<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="#FEF5E7"
    tools:context=".QuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/pgTimer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="1050"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:progress="0" />

        <ImageView
            android:id="@+id/ivFlag"
            android:layout_width="wrap_content"
            android:layout_height="120sp"
            android:layout_margin="10dp"
            android:src="@drawable/il"
            android:contentDescription="@string/flagImage" />
        
        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#363A43"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/question"/>

        <TextView
            android:id="@+id/btnOption1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/option1" />

        <TextView
            android:id="@+id/btnOption2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/option2" />

        <TextView
            android:id="@+id/btnOption3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/option3" />

        <TextView
            android:id="@+id/btnOption4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/option4" />


        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#363A43"
            android:text="@string/_0"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#363A43"
            android:text="@string/currentScore"
            android:gravity="center"
            android:textSize="12sp"/>

        <ImageView
            android:id="@+id/ivLives"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10dp"
            android:src="@drawable/hearts"
            android:contentDescription="@string/livesLeft" />

    </LinearLayout>

</ScrollView>